[package]
name = "logic-ss-13"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }
# bevy = { version = "0.12"}
bevy_turborand = "0.7.0"
futures-lite = "2.0.1"
pathfinding = "4.3.2"
rand = "0.8.5"
